Strony logowania i rejestracji + zrobiony routing między istniejącymi komponentami

--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -1,6 +1,21 @@
 <div class="container">
   <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
+  <h1>Strona główna</h1>
 </div>
-Treść 1 <br>
-Treść 2 <br>
-Treść 3
+
