--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,13 +1,21 @@
 <div id="mySidebar" class="sidebar" [ngStyle]="{'width': sidebarOpen ? '15%' : '7%'}">
-  <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">&times;</a>
+  <div id="navbar-button" *ngIf="!sidebarOpen">
+  <i class="fa-solid fa-chevron-right" id="open-button" style="color: #74C0FC;" (click)="openNav()"></i>
+  </div>
+  <div id="navbar-button" *ngIf="sidebarOpen">
+    <i class="fa-solid fa-chevron-left" id="close-button" style="color: #74C0FC;" (click)="closeNav()"></i>
+    </div>
   <ng-container *ngFor="let icon of icons; let i = index">
     <div *ngIf="(i!== 4 && !sidebarOpen) || (i < 4 && sidebarOpen)" class="option">
         <i [class]="icon.class" [ngClass]="{'icon-big': sidebarOpen, 'icon-small': !sidebarOpen}"></i>
         <div class="option-name" *ngIf="sidebarOpen">{{icon.name}}</div>
     </div>
+    <div class="option" *ngIf="i===4">
+      <i [class]="icons[4].class" [ngClass]="{'icon-big': sidebarOpen, 'icon-small': !sidebarOpen}"></i>
+      <div class="option-name" *ngIf="sidebarOpen">{{icons[4].name}}</div>
+    </div>
     <div class="empty-space" *ngIf="i === 4"></div>
-    <div class="empty-space" *ngIf="i === 4"></div>
-    <div *ngIf="i === 4" style="width: auto; height: 8%"></div>
+    <div *ngIf="i === 4" style="width: auto; height: 3%"></div>
 
 </ng-container>
 <div class="two-last-options-container" *ngIf="sidebarOpen">
@@ -23,7 +31,7 @@
 
 </div>
 
-<div id="main" [ngStyle]="{'marginLeft': sidebarOpen ? '15%' : '7%'}">
-  <button class="openbtn" (click)="openNav()">&#9776;</button>
+<div id="main" [ngStyle]="{'marginLeft': sidebarOpen ? '14%' : '7%'}">
   <app-main-page></app-main-page>
 </div>
+
