--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<video autoplay muted loop class="video-background">
+<video #videoBackground autoplay muted loop class="video-background">
   <source src="assets/3125907-uhd_3840_2160_25fps.mp4" type="video/mp4">
   Twój przeglądarka nie wspiera tagu wideo.
 </video>
