--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<video autoplay muted loop class="video-background">
+<video #videoBackground muted loop class="video-background">
   <source src="assets/3048930-uhd_3840_2160_24fps.mp4" type="video/mp4">
   Twój przeglądarka nie wspiera tagu wideo.
 </video>
