--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <video #videoBackground autoplay muted loop class="video-background">
   <source src="assets/3125907-uhd_3840_2160_25fps.mp4" type="video/mp4">
-  Twój przeglądarka nie wspiera tagu wideo.
+  Twoja przeglądarka nie wspiera tagu wideo.
 </video>
 
 
@@ -12,13 +12,13 @@
           <div id="login-text">Logowanie</div>
           <div class="login-form">
             <input type="email" class="form-control" id="form-input" aria-describedby="emailHelp"
-              placeholder="Nazwa użytkownika lub e-mail">
+              placeholder="Nazwa użytkownika lub e-mail" [(ngModel)]="email" id="email" name="email">
             <small id="emailHelp" class="form-text text-muted"></small>
           </div>
         </div>
         <div class="form-group">
           <div class="login-form">
-            <input type="password" class="form-control" id="form-input" placeholder="Hasło">
+            <input type="password" class="form-control" id="form-input" placeholder="Hasło" [(ngModel)]="password" id="password" name="password">
           </div>
         </div>
         <div id="login-button">
