--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -7,32 +7,61 @@
 <div class="container">
   <div id="app-name">Activity Tracker</div>
   <div class="login-container">
-    <form>
+    <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
       <div class="form-group">
         <div id="login-text">Zarejestruj się</div>
         <div class="login-form">
-          <input type="email" class="form-control" id="form-input" aria-describedby="emailHelp"
-            placeholder="Adres e-mail">
+          <input type="email"
+           class="form-control"
+            id="form-input"
+             aria-describedby="emailHelp"
+            placeholder="Adres e-mail"
+             formControlName="email"
+             [class.invalid]="registerForm.get('email')?.invalid
+             && (registerForm.get('email')?.dirty || registerForm.get('email')?.touched || isSubmitted)"
+             [(ngModel)]="user.email" id="email" name="email">
           <small id="emailHelp" class="form-text text-muted"></small>
         </div>
+        <div *ngIf="registerForm.get('email')?.invalid
+        && (registerForm.get('email')?.dirty || registerForm.get('email')?.touched || isSubmitted)" class="error">
+          To pole jest wymagane
+      </div>
       </div>
       <div class="login-form">
         <input type="username" class="form-control" id="form-input" aria-describedby="usernameHelp"
-          placeholder="Nazwa użytkownika">
+          placeholder="Nazwa użytkownika" formControlName="username" formControlName="username"
+          [class.invalid]="registerForm.get('username')?.invalid
+          && (registerForm.get('username')?.dirty || registerForm.get('username')?.touched || isSubmitted)"
+          [(ngModel)]="user.username" id="username" name="username">
         <small id="usernameHelp" class="form-text text-muted"></small>
       </div>
-      <div class="form-group">
-        <div class="login-form">
-          <input type="password" class="form-control" id="form-input" placeholder="Podaj hasło">
-        </div>
+      <div *ngIf="registerForm.get('username')?.invalid
+        && (registerForm.get('username')?.dirty || registerForm.get('username')?.touched || isSubmitted)" class="error">
+          To pole jest wymagane
       </div>
       <div class="form-group">
         <div class="login-form">
-          <input type="password" class="form-control" id="form-input" placeholder="Podaj hasło ponownie">
+          <input type="password" class="form-control" id="form-input" placeholder="Podaj hasło" formControlName="password"
+          [class.invalid]="registerForm.get('password')?.invalid
+          && (registerForm.get('password')?.dirty || registerForm.get('password')?.touched || isSubmitted)"
+          [(ngModel)]="user.password" id="password" name="password">
+        </div>
+        <div *ngIf="registerForm.get('password')?.invalid
+        && (registerForm.get('password')?.dirty || registerForm.get('password')?.touched || isSubmitted)" class="error">
+          To pole jest wymagane
+      </div>
+      </div>
+      <div class="form-group">
+        <div class="login-form">
+          <input type="password" class="form-control" formControlName="repeatPassword" id="form-input" placeholder="Podaj hasło ponownie"
+          [class.invalid]="registerForm.hasError('mismatch') && registerForm.get('repeatPassword')?.touched">
+        </div>
+        <div *ngIf="registerForm.hasError('mismatch') && registerForm.get('repeatPassword')?.touched" class="error">
+          Passwords must match
         </div>
       </div>
       <div id="login-button">
-        <button type="submit" class="btn btn-primary">Rejestracja</button>
+        <button type="submit" class="btn btn-primary" [disabled]="registerForm.invalid" >Rejestracja</button>
       </div>
     </form>
   </div>
