--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -8,6 +8,10 @@
   z-index: -1;
 }
 
+.invalid {
+  border-color: red;
+}
+
 .container {
   display:flex;
   flex-direction: column;
@@ -16,7 +20,6 @@
   height: 100%;
   width: 100%;
   min-width: 100%;
-  //background-color: #f0f2f5;
 
 }
 
@@ -64,5 +67,14 @@
     width: 50vw;
     height: auto;
   }
+}
+
+.error {
+  color: red;
+  font-size: 0.70em;
+  display: block;
+  position: absolute;
+  margin-left: 2%;
+
 }
 
