--- a/src/app/sidebar/sidebar.component.scss
+++ b/src/app/sidebar/sidebar.component.scss
@@ -1,29 +1,29 @@
 .container {
-  display: flex; /* Stosuje flexbox do ustawienia sidebar i content obok siebie */
-  height: 100vh; /* Pełna wysokość widoku */
+  display: flex;
+  height: 100vh;
 }
 
 .content {
-  flex-grow: 1; /* Zajmuje dostępną przestrzeń obok sidebar */
-  display: flex; /* Stosuje flexbox do wyśrodkowania zawartości wewnątrz */
-  align-items: center; /* Wyśrodkowanie w pionie */
-  justify-content: center; /* Wyśrodkowanie w poziomie */
+  flex-grow: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .sidebar {
-  height: 100%; /* 100% Full-height */
-  width: 0; /* 0 width - change this with JavaScript */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Stay on top */
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111; /* Black*/
-  overflow-x: hidden; /* Disable horizontal scroll */
-  padding-top: 60px; /* Place content 60px from the top */
-  transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+  background-color: #111;
+  overflow-x: hidden;
+  padding-top: 60px;
+  transition: 0.5s;
 }
 
-/* The sidebar links */
+
 .sidebar a {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
@@ -33,12 +33,12 @@
   transition: 0.3s;
 }
 
-/* When you mouse over the navigation links, change their color */
+
 .sidebar a:hover {
   color: #f1f1f1;
 }
 
-/* Position and style the close button (top right corner) */
+
 .sidebar .closebtn {
   position: absolute;
   top: 0;
@@ -47,7 +47,7 @@
   margin-left: 50px;
 }
 
-/* The button used to open the sidebar */
+
 .openbtn {
   font-size: 20px;
   cursor: pointer;
@@ -61,13 +61,13 @@
   background-color: #444;
 }
 
-/* Style page content - use this if you want to push the page content to the right when you open the side navigation */
+
 #main {
-  transition: margin-left .5s; /* If you want a transition effect */
+  transition: margin-left .5s;
   padding: 20px;
 }
 
-/* On smaller screens, where height is less than 450px, change the style of the sidenav (less padding and a smaller font size) */
+
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
@@ -113,7 +113,7 @@
 
 .option-name {
   color: white;
-  transition: opacity 0.5s ease; /* Dodaj animację pojawiania się */
+  transition: opacity 0.5s ease;
   font-size: 1em;
 }
 
