--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -7,11 +7,11 @@
     </div>
   <ng-container *ngFor="let icon of icons; let i = index">
     <div *ngIf="(i!== 4 && !sidebarOpen) || (i < 4 && sidebarOpen)" class="option">
-        <i [class]="icon.class" [ngClass]="{'icon-big': sidebarOpen, 'icon-small': !sidebarOpen}"></i>
+        <i [class]="icon.class" [ngClass]="{'icon-big': sidebarOpen, 'icon-small': !sidebarOpen}" (click)="navigate(icon.name)"></i>
         <div class="option-name" *ngIf="sidebarOpen">{{icon.name}}</div>
     </div>
     <div class="option" *ngIf="i===4">
-      <i [class]="icons[4].class" [ngClass]="{'icon-big': sidebarOpen, 'icon-small': !sidebarOpen}"></i>
+      <i [class]="icons[4].class" [ngClass]="{'icon-big': sidebarOpen, 'icon-small': !sidebarOpen}" (click)="navigate(icons[4].name)"></i>
       <div class="option-name" *ngIf="sidebarOpen">{{icons[4].name}}</div>
     </div>
     <div class="empty-space" *ngIf="i === 4"></div>
